-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0
-
None
-
57f593b96f2b1af21e7d84099d169d51f698672f, dde265294fb8c48f9e0dce95d2287482ef0c0c6b
The following code correctly centers the text in 4.8 (with import QtQuick 1.0), but no longer centers the text under 5.0 (with import QtQuick 2.0).
import QtQuick 2.0 Item { width: 800 height: 400 Text { textFormat: Text.RichText text: "<center>First line<br>----- Second line -----</center>" anchors.centerIn: parent color: "white" width: 300 Rectangle { anchors.fill: parent z: -1 color: "blue" } } }
For Gerrit Dashboard: QTBUG-29262 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
45582,1 | Make HTML horizontal alignment work like in QtQuick 1 | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |
45673,2 | Fix alignment of Text element with implicit size | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |