Make HTML horizontal alignment work like in QtQuick 1

If the text width set is higher than the ideal width, there's
no risk of wrapping, and thus we align the text based on the
full width of the Text element. This matches the behavior in
Qt Quick 1.1.

Task-number: QTBUG-29262
Change-Id: Ib191e3dd9d17e3bea63ca7825708f53768960e26
Reviewed-by: Gunnar Sletta <gunnar.sletta@digia.com>