src/quick/items/qquicktext.cpp
@@ -527,7 +527,7 @@ void QQuickTextPrivate::updateSize()
         }
         if (internalWidthUpdate)
             return;
-        if (wrapMode != QQuickText::NoWrap && q->widthValid())
+        if (q->widthValid() && (wrapMode != QQuickText::NoWrap || extra->doc->idealWidth() < q->width()))
             extra->doc->setTextWidth(q->width());
         else
             extra->doc->setTextWidth(extra->doc->idealWidth()); // ### Text does not align if width is not set (QTextDoc bug)
